@@ -56,6 +56,8 @@ This resolver shares the <a href="../configuration/resolvers.html#common">common
         <td>No, defaults to host given on the patterns, fail if none is set</td></tr>
     <tr><td>port</td><td>The port to connect to</td>
         <td>No, defaults to 22</td></tr>
+    <tr><td>publishMode</td><td>A four digit string (e.g., 0644, see "man chmod", "man open") specifying the permissions of the published files. <span class="since">(since 2.0)</span>
+</td><td>No, defaults to 0600</td></tr>
 </tbody>
 </table>
 <h1>Child elements</h1>
