@@ -1077,187 +1077,6 @@ expr_stmt|;
 block|}
 specifier|private
 name|void
-name|sendBytes
-parameter_list|(
-name|Channel
-name|channel
-parameter_list|,
-name|byte
-index|[]
-name|data
-parameter_list|,
-name|String
-name|fileName
-parameter_list|,
-name|String
-name|mode
-parameter_list|)
-throws|throws
-name|IOException
-throws|,
-name|RemoteScpException
-block|{
-name|OutputStream
-name|os
-init|=
-name|channel
-operator|.
-name|getOutputStream
-argument_list|()
-decl_stmt|;
-name|InputStream
-name|is
-init|=
-operator|new
-name|BufferedInputStream
-argument_list|(
-name|channel
-operator|.
-name|getInputStream
-argument_list|()
-argument_list|,
-name|SEND_BYTES_BUFFER_LENGTH
-argument_list|)
-decl_stmt|;
-try|try
-block|{
-if|if
-condition|(
-name|channel
-operator|.
-name|isConnected
-argument_list|()
-condition|)
-block|{
-name|channel
-operator|.
-name|start
-argument_list|()
-expr_stmt|;
-block|}
-else|else
-block|{
-name|channel
-operator|.
-name|connect
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|JSchException
-name|e1
-parameter_list|)
-block|{
-throw|throw
-operator|(
-name|IOException
-operator|)
-operator|new
-name|IOException
-argument_list|(
-literal|"Channel connection problems"
-argument_list|)
-operator|.
-name|initCause
-argument_list|(
-name|e1
-argument_list|)
-throw|;
-block|}
-name|readResponse
-argument_list|(
-name|is
-argument_list|)
-expr_stmt|;
-name|String
-name|cline
-init|=
-literal|"C"
-operator|+
-name|mode
-operator|+
-literal|" "
-operator|+
-name|data
-operator|.
-name|length
-operator|+
-literal|" "
-operator|+
-name|fileName
-operator|+
-literal|"\n"
-decl_stmt|;
-name|os
-operator|.
-name|write
-argument_list|(
-name|cline
-operator|.
-name|getBytes
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|os
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-name|readResponse
-argument_list|(
-name|is
-argument_list|)
-expr_stmt|;
-name|os
-operator|.
-name|write
-argument_list|(
-name|data
-argument_list|,
-literal|0
-argument_list|,
-name|data
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-name|os
-operator|.
-name|write
-argument_list|(
-literal|0
-argument_list|)
-expr_stmt|;
-name|os
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-name|readResponse
-argument_list|(
-name|is
-argument_list|)
-expr_stmt|;
-name|os
-operator|.
-name|write
-argument_list|(
-literal|"E\n"
-operator|.
-name|getBytes
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|os
-operator|.
-name|flush
-argument_list|()
-expr_stmt|;
-block|}
-specifier|private
-name|void
 name|sendFile
 parameter_list|(
 name|Channel
@@ -1973,277 +1792,6 @@ block|}
 return|return
 name|fileInfo
 return|;
-block|}
-comment|/**      * Copy a local file to a remote directory, uses mode 0600 when creating the file on the remote      * side.      *       * @param localFile      *            Path and name of local file.      * @param remoteTargetDirectory      *            Remote target directory where the file has to end up (optional)      * @param remoteName      *            target filename to use      * @throws IOException      *             in case of network problems      * @throws RemoteScpException      *             in case of problems on the target system (connection ok)      */
-specifier|public
-name|void
-name|put
-parameter_list|(
-name|String
-name|localFile
-parameter_list|,
-name|String
-name|remoteTargetDirectory
-parameter_list|,
-name|String
-name|remoteName
-parameter_list|)
-throws|throws
-name|IOException
-throws|,
-name|RemoteScpException
-block|{
-name|put
-argument_list|(
-name|localFile
-argument_list|,
-name|remoteTargetDirectory
-argument_list|,
-name|remoteName
-argument_list|,
-literal|"0600"
-argument_list|)
-expr_stmt|;
-block|}
-comment|/**      * Create a remote file and copy the contents of the passed byte array into it. Uses mode 0600      * for creating the remote file.      *       * @param data      *            the data to be copied into the remote file.      * @param remoteFileName      *            The name of the file which will be created in the remote target directory.      * @param remoteTargetDirectory      *            Remote target directory where the file has to end up (optional)      * @throws IOException      *             in case of network problems      * @throws RemoteScpException      *             in case of problems on the target system (connection ok)      */
-specifier|public
-name|void
-name|put
-parameter_list|(
-name|byte
-index|[]
-name|data
-parameter_list|,
-name|String
-name|remoteFileName
-parameter_list|,
-name|String
-name|remoteTargetDirectory
-parameter_list|)
-throws|throws
-name|IOException
-throws|,
-name|RemoteScpException
-block|{
-name|put
-argument_list|(
-name|data
-argument_list|,
-name|remoteFileName
-argument_list|,
-name|remoteTargetDirectory
-argument_list|,
-literal|"0600"
-argument_list|)
-expr_stmt|;
-block|}
-comment|/**      * Create a remote file and copy the contents of the passed byte array into it. The method use      * the specified mode when creating the file on the remote side.      *       * @param data      *            the data to be copied into the remote file.      * @param remoteFileName      *            The name of the file which will be created in the remote target directory.      * @param remoteTargetDirectory      *            Remote target directory where the file has to end up (optional)      * @param mode      *            a four digit string (e.g., 0644, see "man chmod", "man open")      * @throws IOException      *             in case of network problems      * @throws RemoteScpException      *             in case of problems on the target system (connection ok)      */
-specifier|public
-name|void
-name|put
-parameter_list|(
-name|byte
-index|[]
-name|data
-parameter_list|,
-name|String
-name|remoteFileName
-parameter_list|,
-name|String
-name|remoteTargetDirectory
-parameter_list|,
-name|String
-name|mode
-parameter_list|)
-throws|throws
-name|IOException
-throws|,
-name|RemoteScpException
-block|{
-name|ChannelExec
-name|channel
-init|=
-literal|null
-decl_stmt|;
-if|if
-condition|(
-operator|(
-name|remoteFileName
-operator|==
-literal|null
-operator|)
-operator|||
-operator|(
-name|mode
-operator|==
-literal|null
-operator|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"Null argument."
-argument_list|)
-throw|;
-block|}
-if|if
-condition|(
-name|mode
-operator|.
-name|length
-argument_list|()
-operator|!=
-name|MODE_LENGTH
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"Invalid mode."
-argument_list|)
-throw|;
-block|}
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|mode
-operator|.
-name|length
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-if|if
-condition|(
-operator|!
-name|Character
-operator|.
-name|isDigit
-argument_list|(
-name|mode
-operator|.
-name|charAt
-argument_list|(
-name|i
-argument_list|)
-argument_list|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"Invalid mode."
-argument_list|)
-throw|;
-block|}
-block|}
-name|String
-name|cmd
-init|=
-literal|"scp -t "
-decl_stmt|;
-if|if
-condition|(
-name|remoteTargetDirectory
-operator|!=
-literal|null
-operator|&&
-name|remoteTargetDirectory
-operator|.
-name|length
-argument_list|()
-operator|>
-literal|0
-condition|)
-block|{
-name|cmd
-operator|=
-name|cmd
-operator|+
-literal|"-d "
-operator|+
-name|remoteTargetDirectory
-expr_stmt|;
-block|}
-try|try
-block|{
-name|channel
-operator|=
-name|getExecChannel
-argument_list|()
-expr_stmt|;
-name|channel
-operator|.
-name|setCommand
-argument_list|(
-name|cmd
-argument_list|)
-expr_stmt|;
-name|sendBytes
-argument_list|(
-name|channel
-argument_list|,
-name|data
-argument_list|,
-name|remoteFileName
-argument_list|,
-name|mode
-argument_list|)
-expr_stmt|;
-comment|// channel.disconnect();
-block|}
-catch|catch
-parameter_list|(
-name|JSchException
-name|e
-parameter_list|)
-block|{
-if|if
-condition|(
-name|channel
-operator|!=
-literal|null
-condition|)
-block|{
-name|channel
-operator|.
-name|disconnect
-argument_list|()
-expr_stmt|;
-block|}
-throw|throw
-operator|(
-name|IOException
-operator|)
-operator|new
-name|IOException
-argument_list|(
-literal|"Error during SCP transfer."
-operator|+
-name|e
-operator|.
-name|getMessage
-argument_list|()
-argument_list|)
-operator|.
-name|initCause
-argument_list|(
-name|e
-argument_list|)
-throw|;
-block|}
 block|}
 comment|/**      * @return      * @throws JSchException      */
 specifier|private
